--- a/simple.html
+++ b/simple.html
@@ -18,10 +18,8 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filter Content -->
 		<p>
-			Just stuff for now,
-			Not sure if we should replace this or not.
+			Just nothing but trouble.
 		</p>
 	</main>
 	<footer class="container">
