--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--
 	
 	Copyright 2020 Git Training
-	Adding changes before rebasing conflicts
+	Some conflicting changes from master branch
 -->
 
 <head>
@@ -18,13 +18,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filter Content -->
 		<p>
-			Just some content
+			Just stuff for now,
+			Not sure if we should replace this or not.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2014</p>
+		<p>&copy; Abhishek Bansal  2014</p>
 	</footer>
 </body>
 </html>
