Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,11 @@
 <!--
 	
 	Copyright 2020 Git Training
-	Some conflicting changes from master branch
+	
 -->
 
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Lots of trouble in a little repository.</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
