--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Abhishek Bansal  2014</p>
+		<p>&copy; 2014 Git training</p>
 	</footer>
 </body>
 </html>
