Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 -->
 
 <head>
-	<title>Lots of trouble in a little repository.</title>
+	<title>Updating title for Stashing example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,6 +19,7 @@
 <body>
 	<main class="container">
 		<p>
+			Adding more text.
 			Just nothing but trouble.
 		</p>
 	</main>
