--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 -->
 
 <head>
-	<title>Updating title for Stash Branch  example</title>
+	<title>Newly Updating title for Tagging compare  example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
